feat: revised code